AP-2008-01-30-0: Enhancem.: o Adding the global database configuration
                            o Use the database configuration in checktree_arco
                            o Use the logging framework (JG-2008-01-16-0) in 
                              checktree_arco
                 Issue:     124
                 Review:    JG

MD-2008-01-30-0: Bugfix:    ts_config was not declared as global in qhost test

JG-2008-01-30-0: Enhancem.: Added new test system_tests/clients/qselect.
                 Review:    RD
                 Enhancem.: Use the logging framework (JG-2008-01-16-0) for 
                            further checks in checktree.

AH-2008-01-30-0: Bugfix:    2nd run of resource_reservation test failed because 
                            calendar object was added but not removed. 
                 Review:    RD

MD-2008-01-29-0: Ehhancem.: Added IZ 245 issue test, as part of qhost system_test
                 Review:    JG

CR-2008-01-29-1: Enhancem.: Finished hedeby install test, updated hedeby tests
                 Issue:     hedeby #209
                 Review:    RH

CR-2008-01-29-0: Bugfix:    Fixed expect problems in operate_add_cluster()
                 Review:    RD

OJ-2008-01-28-0: Enhancem.: Added test case 2445 at in qconf/check.61.exp
                 Issue:     2445
                 Review:    MP

RD-2008-01-28-2: Bugfix:    enabled all runlevels for qdel test
                 Review:    JG

RD-2008-01-28-1: Bugfix:    removed use of obsolete message macros
                 Review:    JG

RD-2008-01-28-0: Enhancem.: disabled drmaa 0.95 for 6.2
                 Review:    AH

MP-2008-01-25-0: Enhancem.: Added test for IZ 2465 dealing with unwanted error
                            message when job not running due to RQs
                 Issue:     2465
                 Review:    OJ

JG-2008-01-24-0: Bugfix:    Fixed authuser test.
                 Review:    RH